--- a/SourceNetUI/src/styles.css
+++ b/SourceNetUI/src/styles.css
@@ -2,4 +2,4 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
 @import "~@ng-select/ng-select/themes/default.theme.css";
 /* @import "~@ng-select/ng-select/themes/material.theme.css"; */
-@import "~ngx-smart-modal/ngx-smart-modal";
+/* @import "~ngx-smart-modal/ngx-smart-modal"; */
