--- a/SourceNetUI/src/app/header/header.component.html
+++ b/SourceNetUI/src/app/header/header.component.html
@@ -1,16 +1,16 @@
 <nav class="navbar navbar-expand-sm navbar-light bg-light navbar-dark bg-dark">
     <a class="glyphicon glyphicon-user" (click)="linkPage('LogIn')" style="font-size:26px; color:chocolate;"></a>
    
-    <div dir="rtl" class="collapse navbar-collapse" id="navbarNav">
+    <div  class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['search']" >חיפוש</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['search']">העלאה</a>
+          <a class="nav-link" [routerLink]="['upload']">העלאה</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['upload']" >הוספת משתמש</a>
+          <a class="nav-link" [routerLink]="['addUser']" >הוספת משתמש</a>
         </li>
       </ul>
     </div>
