--- a/SourceNetUI/src/app/add-user/add-user.component.html
+++ b/SourceNetUI/src/app/add-user/add-user.component.html
@@ -1,22 +1,28 @@
 <div class="container">
-    <form dir="rtl">
+    <form dir="rtl" >
       
       <div class="form-group row">
         <label for="name" class="col-sm-2">שם משתמש:</label>
-        <input type="text" class="form-control col-sm-3" id="email" placeholder="שם משתמש" name="name" required>
+        <input type="text" class="form-control col-sm-3" id="email" [(ngModel)]="newUser.userName"  placeholder="שם משתמש" name="name" required>
       </div>
 
       <div class="form-group row">
         <label for="pwd" class="col-sm-2">סיסמה:</label>
-        <input type="password" class="form-control col-sm-3" id="pwd" placeholder="סיסמה" name="pwd" required>
+        <input type="password" class="form-control col-sm-3" [(ngModel)]="newUser.password" id="pwd" placeholder="סיסמה" name="pwd" required>
       </div>
 
       <div class="form-group row">
           <label for="email" class="col-sm-2">מייל</label>
-          <input type="email" class="form-control col-sm-3" id="email" placeholder="מייל" name="email"> 
+          <input type="email" class="form-control col-sm-3" [(ngModel)]="newUser.email" id="email" placeholder="מייל" name="email"> 
       </div>
+      <div class="form-group row">
+        <label for="email" class="col-sm-2">הרשאות</label>
+        <select name="select" [(ngModel)]="newUser.roleCode">
+          <option *ngFor="let role of roles" [value]="roleCode">{{role.roleType}}</option>
+        </select>
+    </div>
 
-      <button type="button" class="btn btn-lg">הוסף</button>
+      <button type="submit" class="btn btn-lg" (click)="addUser()">הוסף</button>
     </form>
 
 </div>
