--- a/SourceNetUI/src/styles.css
+++ b/SourceNetUI/src/styles.css
@@ -3,3 +3,4 @@
 @import "~@ng-select/ng-select/themes/default.theme.css";
 /* @import "~@ng-select/ng-select/themes/material.theme.css"; */
 /* @import "~ngx-smart-modal/ngx-smart-modal"; */
+@import '~ngx-toastr/toastr';
