--- a/SourceNetUI/src/app/header/header.component.html
+++ b/SourceNetUI/src/app/header/header.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-light navbar-dark bg-dark">
-    <a class="glyphicon glyphicon-user" (click)="linkPage('LogIn')" style="font-size:26px; color:chocolate;"></a>
+<nav dir="rtl" class="navbar navbar-expand-sm navbar-light bg-light navbar-dark bg-dark">
+    <a class="glyphicon glyphicon-user" [routerLink]="['login']" style="font-size:26px; color:chocolate;"></a>
    
     <div  class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
@@ -11,6 +11,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['addUser']" >הוספת משתמש</a>
+        </li>
+        <li *ngIf="permissionAdmin" class="nav-item">
+          <a class="nav-link" [routerLink]="['roles']" > הרשאות</a>
         </li>
       </ul>
     </div>
