--- a/SourceNetUI/src/app/add-user/add-user.component.html
+++ b/SourceNetUI/src/app/add-user/add-user.component.html
@@ -22,7 +22,7 @@
         </select>
     </div>
 
-      <button type="submit" class="btn btn-lg" (click)="addUser()">הוסף</button>
+      <button type="submit" class="btn btn-lg" (click)="submitForm()">הוסף</button>
     </form>
 
 </div>
