--- a/SourceNetUI/src/app/edit-resource/edit-resource.component.html
+++ b/SourceNetUI/src/app/edit-resource/edit-resource.component.html
@@ -26,6 +26,7 @@
             [clearOnBackspace]="false" bindLabel="categoryName" [(ngModel)]="SingelFile.Categories" name="control16">
           </ng-select>
         </div>
+        <button (click)="addCategory()">הוספת קטגוריה</button>
     <button (click)="editFile()">עדכן</button>
   </form>
 
