--- a/SourceNetUI/src/app/role/role.component.html
+++ b/SourceNetUI/src/app/role/role.component.html
@@ -1,29 +1,153 @@
-<!-- <div  >
-  <div *ngFor="let role of roles">
-    <p>{{role.roleType}}</p>
-    <div *ngFor="let pre of role.Permissions">
-      <p>{{pre.permissionsType}}</p>
-    </div>
-    <button (click)="edit(role)">edit</button>
-  </div>
-</div> -->
-<div class="container" style="direction: rtl;">
-  <div class="row">
-    <div class="col-md-4">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h3 class="panel-title">
-            קבוצות הרשאות</h3>
+<script type="text/javascript">
+  $(document).ready(function () {
+    // Activate tooltip
+    $('[data-toggle="tooltip"]').tooltip();
+
+    // Select/Deselect checkboxes
+    var checkbox = $('table tbody input[type="checkbox"]');
+    $("#selectAll").click(function () {
+      if (this.checked) {
+        checkbox.each(function () {
+          this.checked = true;
+        });
+      } else {
+        checkbox.each(function () {
+          this.checked = false;
+        });
+      }
+    });
+    checkbox.click(function () {
+      if (!this.checked) {
+        $("#selectAll").prop("checked", false);
+      }
+    });
+  });
+</script>
+
+<div class="container" dir="rtl">
+  <div class="table-wrapper">
+    <div class="table-title">
+      <div class="row">
+        <div class="col-sm-6">
+          <h2 style="margin-left: 300px;"> <b>הרשאות</b></h2>
         </div>
-        <ul class="list-group">
-          <a (click)="showPer(role)" class="list-group-item" *ngFor="let role of roles">{{role.roleType}}</a>
-        </ul>
+        <div class="col-sm-6">
+          <li style="margin-right: 300px;" class="btn btn-success" data-toggle="modal"><i class="material-icons"
+              (click)="addRole()">&#xE147;</i> <span>הוספת הרשאה</span></li>
+        </div>
       </div>
     </div>
-    <div class="col-md-6" *ngIf="role&&role.Permissions">
-      <div *ngFor="let pre of role.Permissions">
-        {{pre.permissionsType}}
-      </div>
+    <table class="table table-striped table-hover">
+      <thead>
+        <tr>
+          <th>סוג</th>
+          <th>הרשאות</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let role of roles">
+          <td>{{role.roleType}}</td>
+          <td *ngIf="role&&role.Permissions">
+            <p *ngFor="let pre of role.Permissions"> {{pre.permissionsType}}</p>
+          </td>
+          <td>
+            <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons"
+                data-toggle="tooltip" title="Edit" (click)="edit(role)">&#xE254;</i></a>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+<!-- Edit Modal HTML -->
+<div id="addEmployeeModal" class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <form>
+        <div class="modal-header">
+          <h4 class="modal-title">Add Employee</h4>
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        </div>
+        <div class="modal-body">
+          <div class="form-group">
+            <label>Name</label>
+            <input type="text" class="form-control" required>
+          </div>
+          <div class="form-group">
+            <label>Email</label>
+            <input type="email" class="form-control" required>
+          </div>
+          <div class="form-group">
+            <label>Address</label>
+            <textarea class="form-control" required></textarea>
+          </div>
+          <div class="form-group">
+            <label>Phone</label>
+            <input type="text" class="form-control" required>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+          <input type="submit" class="btn btn-success" value="Add">
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+<!-- Edit Modal HTML -->
+<div id="editEmployeeModal" class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <form>
+        <div class="modal-header">
+          <h4 class="modal-title">Edit Employee</h4>
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        </div>
+        <div class="modal-body">
+          <div class="form-group">
+            <label>Name</label>
+            <input type="text" class="form-control" required>
+          </div>
+          <div class="form-group">
+            <label>Email</label>
+            <input type="email" class="form-control" required>
+          </div>
+          <div class="form-group">
+            <label>Address</label>
+            <textarea class="form-control" required></textarea>
+          </div>
+          <div class="form-group">
+            <label>Phone</label>
+            <input type="text" class="form-control" required>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+          <input type="submit" class="btn btn-info" value="Save">
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+<!-- Delete Modal HTML -->
+<div id="deleteEmployeeModal" class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <form>
+        <div class="modal-header">
+          <h4 class="modal-title">Delete Employee</h4>
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        </div>
+        <div class="modal-body">
+          <p>אם את בטוחה במחיקת השורה?</p>
+          <p class="text-warning"><small></small></p>
+        </div>
+        <div class="modal-footer">
+          <input type="button" class="btn btn-default" data-dismiss="modal" value="ביטול">
+          <input type="submit" class="btn btn-danger" value="מחיקה">
+        </div>
+      </form>
     </div>
   </div>
 </div>
