--- a/SourceNetUI/src/app/upload/upload.component.html
+++ b/SourceNetUI/src/app/upload/upload.component.html
@@ -3,45 +3,38 @@
 
         <div class="form-group row">
             <label class="col-sm-2">הוסף קובץ</label>
-            <input dir="rtl" type="file" name="file" (change)="handleFileInput($event.target.files)"
-                class="form-control col-sm-3" id="upload" accept="" required>
+            <!-- <input dir="rtl" type="file" name="file"  webkitDirectory (change)="handleFileInput($event.target.files)"
+                class="form-control col-sm-3" id="upload" accept="" required> -->
+                <file-drop dropZoneLabel="" (onFileDrop)="dropped($event)" 
+                (onFileOver)="fileOver($event)" (onFileLeave)="fileLeave($event)">
+                    <span>גרור תקייה או קובץ</span>
+                </file-drop>
         </div>
-
-        <div class="form-group row">
-            <label class="col-sm-2">סוג הרשאה</label>
-            <ng-select style="background-color: white;
-            height: 9px;
-            width: 270px;" [items]="permission" [multiple]="true" [closeOnSelect]="false" [clearOnBackspace]="false"
-                bindLabel="permissionsType" placeholder="בחר הרשאות קובץ" [(ngModel)]="recorceFile.Permissions"
-                name="control1">
-            </ng-select>
+        <div class="upload-table" >
+            <table class="table" style="color: white !important">
+                <thead>
+                    <tr>
+                        <th>שם</th>
+                        <th>גודל</th>
+                        <th>תאריך עריכה אחרון</th>
+                        <th> סוג</th>
+                    </tr>
+                </thead>
+                <tbody class="upload-name-style">
+                    <tr *ngFor="let item of files; let i=index">
+                        <td>{{ item.resourceName }}</td>
+                        <td>{{ item.sizeB }} MB</td>
+                        <td>{{ item.date | date:'short'}}</td>
+                        <td>{{ item.type }}</td>
+                        <td>
+                            <button (click)="openModal(item,i)">עדכון פרטים</button>
+                            <button (click)="uploadSingleFile(i,item)">העלאת קובץ</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
-
-        <div class="form-group row">
-            <label class="col-sm-2">בחר קטגוריה</label>
-            <ng-select style="background-color: white;
-            height: 9px;
-            width: 270px;" [items]="categories" [multiple]="true" [closeOnSelect]="false" [clearOnBackspace]="false"
-                bindLabel="categoryName" placeholder="בחר קטגוריות" [(ngModel)]="recorceFile.Categories"
-                name="control1">
-            </ng-select>
-        </div>
-
-        <div class="form-group row">
-            <label class="col-sm-2"> גודל הקובץ</label>
-            <input type="text" name="size" [(ngModel)]="recorceFile.sizeB" readonly>
-        </div>
-
-        <div class="form-group row">
-            <label class="col-sm-2"> בעלי הקובץ</label>
-            <input type="text" name="auth" [(ngModel)]="recorceFile.authorName">
-        </div>
-
-        <div class="form-group row">
-            <label class="col-sm-2"> תאריך יצירת הקובץ </label>
-            <input type="datetime" name="date" [(ngModel)]="recorceFile.date" readonly>
-        </div>
-
-        <button type="button" class="btn btn-lg" (click)="uploadFile11()">הוסף קובץ</button>
+        <button (click)="openModalUpdateAll()">עדכון פרטים לכל הקבצים</button>
+        <button type="button" class="btn btn-lg" (click)="uploadAllFiles()">העלאת כל הקבצים</button>
     </form>
 </div>
