--- a/SourceNetUI/src/app/edit-resource-modal/edit-resource-modal.component.html
+++ b/SourceNetUI/src/app/edit-resource-modal/edit-resource-modal.component.html
@@ -1,6 +1,9 @@
+   <div style="direction: rtl;text-align: right;    margin-top: 45px;
+   margin-right: 20px;
+   margin-bottom: 10px;">
     <div class="form-group row">
-            <label class="col-sm-2">סוג הרשאה</label>
-            <ng-select style="background-color: white;
+            <label class="col-sm-4">סוג הרשאה</label>
+            <ng-select class="col-6" style="background-color: white;
             height: 9px;
             width: 270px;" [items]="permission" [multiple]="true" [closeOnSelect]="false" [clearOnBackspace]="false"
                 bindLabel="permissionsType" placeholder="בחר הרשאות קובץ" [(ngModel)]="recorceFile.Permissions"
@@ -9,32 +12,35 @@
         </div>
 
         <div class="form-group row">
-            <label class="col-sm-2">בחר קטגוריה</label>
-            <ng-select style="background-color: white;
+            <label class="col-sm-4">בחר קטגוריה</label>
+            <ng-select class="col-6" style="background-color: white;
             height: 9px;
             width: 270px;" [items]="categories" [multiple]="true" [closeOnSelect]="false" [clearOnBackspace]="false"
                 bindLabel="categoryName" placeholder="בחר קטגוריות" [(ngModel)]="recorceFile.Categories"
                 name="control1">
             </ng-select>
+            <div class="form-group col-2">
+                    <i class="fas fa-plus-circle" (click)="addCategory()"></i>
+            </div>
         </div>
+        
+
         <div class="form-group row">
-            <button (click)="addCategory()">הוספת קטגוריה</button>
+            <label class="col-sm-4"> גודל הקובץ</label>
+            <input type="text" class="form-control col-6"  name="size" [(ngModel)]="recorceFile.sizeB" readonly>
         </div>
 
         <div class="form-group row">
-            <label class="col-sm-2"> גודל הקובץ</label>
-            <input type="text" name="size" [(ngModel)]="recorceFile.sizeB" readonly>
+            <label class="col-sm-4"> בעלי הקובץ</label>
+            <input class="form-control col-6"  type="text" name="auth" [(ngModel)]="recorceFile.authorName">
         </div>
 
         <div class="form-group row">
-            <label class="col-sm-2"> בעלי הקובץ</label>
-            <input type="text" name="auth" [(ngModel)]="recorceFile.authorName">
-        </div>
-
-        <div class="form-group row">
-            <label class="col-sm-2"> תאריך יצירת הקובץ </label>
-            <input type="datetime" name="date" [(ngModel)]="recorceFile.date" readonly>
+            <label class="col-sm-4"> תאריך יצירת הקובץ </label>
+            <input class="form-control col-6"  type="datetime" name="date" [(ngModel)]="recorceFile.date" readonly>
         </div>
         <div>
-          <button (click)="save()">שמור</button>
+          <button class="btn btn-outline-dark" style="float: left;margin-left: 20px;
+          margin-bottom: 12px;" (click)="save()">שמור</button>
         </div>
+    </div>
