--- a/SourceNetUI/src/app/log-in/log-in.component.css
+++ b/SourceNetUI/src/app/log-in/log-in.component.css
@@ -2,7 +2,7 @@
     background-color: rgba(26, 25, 24, 0.952);
     margin:50px auto;
     width: 500px;
-    height: 600px;
+    height: 300px;
     border-radius: 15px;
     padding: 20px;
     padding-top: 3%;
@@ -10,13 +10,16 @@
 }
 .btn{
     background-color:#d86d16;
-    margin-top: 10%;
+    margin-top: 5%;
     margin-left:40%;
 }
 
 label{
     color: #d86d16;
     font-size: 12pt;
-    /*padding-top: 5px;
-    direction: rtl;*/
+   
+}
+.form-group {
+    margin-bottom: 1rem !important;
+    margin-top: 2rem !important;
 }
