--- a/SourceNetUI/src/app/search/SearchBy/search-by-name/search-by-name.component.html
+++ b/SourceNetUI/src/app/search/SearchBy/search-by-name/search-by-name.component.html
@@ -1,9 +1,6 @@
-<div dir="rtl" class="form-group"> 
-    <a href="#" (click)="removeSearch()" >
-        <span class="glyphicon glyphicon-remove col-sm-2"></span>
-    </a>
-    <input type="text" class="form-control col-sm-7" id="name" [(ngModel)]="searchName" (keyup)="search()" >
+<div dir="rtl" class="form-group row">
     <label class="col-sm-3" for="name">שם</label>
-  </div>
+    <input type="text" class="form-control col-sm-7" id="name" [(ngModel)]="searchName" (keyup)="search()">
+    <i style="margin: 12px;" class="fas fa-trash-alt" (click)="removeSearch()"></i>
 
-
+</div>
