--- a/SourceNetUI/src/app/search/SearchBy/search-by-type/search-by-type.component.html
+++ b/SourceNetUI/src/app/search/SearchBy/search-by-type/search-by-type.component.html
@@ -1,10 +1,8 @@
-<div dir="rtl" class="form-group"> 
-    <a href="#" (click)="removeSearch()" >
-        <span class="glyphicon glyphicon-remove col-sm-2"></span>
-    </a>
-    <select (change)="searchType()" name="type" [(ngModel)]="search" class="form-control col-sm-7">
-        <option *ngFor="let type of types"  [value]="type">{{type}}</option>
-    </select>
+<div dir="rtl" class="form-group row">
     <label class="col-sm-3" for="type">סוג</label>
-  </div>
+    <select (change)="searchType()" name="type" [(ngModel)]="search" class="form-control col-sm-7">
+        <option *ngFor="let type of types" [value]="type">{{type}}</option>
+    </select>
+    <i style="margin: 12px;" class="fas fa-trash-alt" (click)="removeSearch()"></i>
 
+</div>
