--- a/SourceNetUI/src/app/search/search.component.css
+++ b/SourceNetUI/src/app/search/search.component.css
@@ -1,11 +1,4 @@
-.container{
-    background-color: rgba(26, 25, 24, 0.952);
-    margin:50px auto;
-    width: 1100px;
-    height: 600px;
-    border-radius: 15px;
-    padding: 20px;
-}
+
 .row{
     margin-top: 10px;
 }
@@ -20,12 +13,15 @@ label{
 }
 
 p{
-    color: #ffffff;
     text-align:right; 
 }
 
 .file{
-    margin: 0 5px;
+    text-align: center;
+    border-color: orange;
+    border-style: solid;
+    border-width: 1px;
+    margin: 5px 6px;
 }
 .btnFile{
     background-color:  rgba(26, 25, 24, 0);
