--- a/SourceNetUI/src/app/user/user.component.html
+++ b/SourceNetUI/src/app/user/user.component.html
@@ -35,8 +35,8 @@
           <div class="col-sm-6">
             <h2 style="margin-left: 300px;"> <b>משתמשים</b></h2>
           </div>
-          <div class="col-sm-6">
-            <li style="margin-right: 300px;" class="btn btn-success" data-toggle="modal"><i
+          <div class="col-sm-6" >
+            <li style="margin-right: 300px;background-color: #d2691e !important" class="btn btn-success" data-toggle="modal"><i
                 class="material-icons" (click)="addUser()">&#xE147;</i> <span>הוספת משתמש</span></li>
           </div>
         </div>
